deleting node is buggy

--- a/Binary Search Trees.ipynb
+++ b/Binary Search Trees.ipynb
@@ -29,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import unittest\n",
     "from random import randint"
    ]
   },
@@ -131,6 +132,7 @@
     "            self.insert_recursive(self.leader, key)\n",
     "\n",
     "    def insert_recursive(self, root, key):\n",
+    "        # ignoring insertion if key already exists\n",
     "        if root.value > key:\n",
     "            # go left \n",
     "            if root.get_left() is None:\n",
@@ -177,7 +179,72 @@
     "            \n",
     "            if root.get_right() is not None:\n",
     "                for right_node in self._inorder_recursive(root.get_right()):\n",
-    "                    yield right_node"
+    "                    yield right_node\n",
+    "    \n",
+    "    def max_depth(self):\n",
+    "        return self._max_depth_recursive(self.leader)\n",
+    "    \n",
+    "    def _max_depth_recursive(self, root):\n",
+    "        if root is None:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return 1 + max(self._max_depth_recursive(root.get_left() ), \n",
+    "                           self._max_depth_recursive(root.get_right()))\n",
+    "    \n",
+    "    def delete_key(self, key):\n",
+    "        self._delete_leaf(self.leader, key)\n",
+    "    \n",
+    "    def _find_and_replace(self, root, key, new_node):\n",
+    "        \"\"\"\n",
+    "        Recursively tries to find a given key, and replace it with the node value provided.\n",
+    "        \"\"\"\n",
+    "        if root:\n",
+    "            if key == self.leader.value:\n",
+    "                self.leader == new_node\n",
+    "            elif root.value > key:\n",
+    "                # go left\n",
+    "                if root.get_left().value == key:\n",
+    "                    root.set_left(new_node)\n",
+    "                else:\n",
+    "                    self._find_and_replace(root.get_left(), key, new_node)\n",
+    "            elif root.value < key:\n",
+    "                # go right\n",
+    "                if root.get_right().value == key:\n",
+    "                    root.set_right(new_node)\n",
+    "                else:\n",
+    "                    self._find_and_replace(root.get_right(), key, new_node)\n",
+    "    \n",
+    "    def _delete_leaf(self, root, key):\n",
+    "        print(f'{root} {key}')\n",
+    "        if root is None:\n",
+    "            pass # Again, maybe raise KeyError\n",
+    "        elif root.value == key:\n",
+    "            left_child = root.get_left()\n",
+    "            right_child = root.get_right()\n",
+    "            if (left_child is None) and (right_child is None):\n",
+    "                # set root to None\n",
+    "                self._find_and_replace(self.leader, root.value, None)\n",
+    "            elif (left_child is None):\n",
+    "                # set root to right child\n",
+    "                self._find_and_replace(self.leader, root.value, root.get_right())\n",
+    "            elif (right_child is None):\n",
+    "                # set root to left_child\n",
+    "                self._find_and_replace(self.leader, root.value, root.get_right())\n",
+    "            elif (left_child is not None) and (right_child is not None):\n",
+    "                print(f'replacing {root} with {right_child}')\n",
+    "                root.value = right_child.value\n",
+    "                root.set_left(left_child)\n",
+    "                root.set_right(right_child)\n",
+    "                new_key = right_child.value\n",
+    "                print(f'new root {root}')\n",
+    "                self._delete_leaf(right_child, new_key)\n",
+    "        elif root.value > key:\n",
+    "            # go left\n",
+    "            self._delete_leaf(root.get_left(), key)\n",
+    "        elif root.value < key:\n",
+    "            # go right\n",
+    "            self._delete_leaf(root.get_right(), key)\n",
+    "            "
    ]
   },
   {
@@ -189,7 +256,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True]\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n",
+      "Test passed\n"
      ]
     }
    ],
@@ -201,7 +269,34 @@
     "    bst.insert(k)\n",
     "head = bst.leader.value\n",
     "found = [bst.find(x) for x in range(0, 20)]\n",
-    "print(found)"
+    "print(list(bst.inorder_traversal()))\n",
+    "\n",
+    "class TestOrder(unittest.TestCase):\n",
+    "    def runTest(self):\n",
+    "        # won't always pass as there's the odd chance that some number won't be inserted\n",
+    "        self.assertListEqual(list(bst.inorder_traversal()),\n",
+    "                              list(range(21)))\n",
+    "        print('Test passed')\n",
+    "\n",
+    "TestOrder().runTest()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deletion\n",
+    "\n",
+    "Take the example binary search tree\n",
+    "![img](resources/bst.png)\n",
+    "\n",
+    "Removing a key could lead to the following cases:\n",
+    "\n",
+    "1. **key is a leaf** -- simply remove and continue\n",
+    "2. **key has one child node** -- replace node with child node and proceed\n",
+    "3. **key has two children nodes** -- find in order successor and replace contents of the key node with the in order successor. Replace in order successor with it's in order succesor, etc.\n",
+    "\n",
+    "Complexity deletion $O(h)$."
    ]
   },
   {
@@ -210,24 +305,59 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 4, 6, 7, 8, 10, 13, 14]\n",
+      "(key = 8, (3, 10)) 6\n",
+      "(key = 3, (1, 6)) 6\n",
+      "(key = 6, (4, 7)) 6\n",
+      "replacing (key = 6, (4, 7)) with (key = 7, (none, none))\n",
+      "new root (key = 7, (4, 7))\n",
+      "(key = 7, (none, none)) 7\n",
+      "[1, 3, 8, 10, 13, 14]\n"
+     ]
     }
    ],
    "source": [
-    "list(bst.inorder_traversal())"
+    "bst2 = BST()\n",
+    "bst2.insert(8)\n",
+    "bst2.insert(3)\n",
+    "bst2.insert(1)\n",
+    "bst2.insert(6)\n",
+    "bst2.insert(4)\n",
+    "bst2.insert(7)\n",
+    "bst2.insert(10)\n",
+    "bst2.insert(14)\n",
+    "bst2.insert(13)\n",
+    "print(list(bst2.inorder_traversal()))\n",
+    "# Delete leaf\n",
+    "bst2.delete_key(6)\n",
+    "print(list(bst2.inorder_traversal()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Advantages of BST\n",
+    "\n",
+    "- Unlike hash maps, binary search trees have linear insertion and deletion times.\n",
+    "- Inorder traversal is $O(n)$ too, which is way better than any sorting obtainable from hash maps.\n",
+    "- Hash table resizing is quite costly, can be avoided when working with binary search trees\n",
+    "\n",
+    "## Use cases\n",
+    "\n",
+    "Huffman codes, heaps, heap sort, hashing in p2p networks.\n",
+    "\n",
+    "\n",
     "# Further reading\n",
     "\n",
     "[Geeks for Geeks](http://www.geeksforgeeks.org/binary-search-tree-set-1-search-and-insertion/)\n",
