--- a/Binary Search Trees.ipynb
+++ b/Binary Search Trees.ipynb
@@ -59,6 +59,9 @@
     "    def set_right(self, node):\n",
     "        self.children[1] = node\n",
     "    \n",
+    "    def set_to(self, other):\n",
+    "        self = other\n",
+    "    \n",
     "    def __repr__(self):\n",
     "        r = \"none\" if self.children[1] is None else self.children[1].value\n",
     "        l = \"none\" if self.children[0] is None else self.children[0].value\n",
@@ -193,27 +196,7 @@
     "    \n",
     "    def delete_key(self, key):\n",
     "        self._delete_leaf(self.leader, key)\n",
-    "    \n",
-    "    def _find_and_replace(self, root, key, new_node):\n",
-    "        \"\"\"\n",
-    "        Recursively tries to find a given key, and replace it with the node value provided.\n",
-    "        \"\"\"\n",
-    "        if root:\n",
-    "            if key == self.leader.value:\n",
-    "                self.leader == new_node\n",
-    "            elif root.value > key:\n",
-    "                # go left\n",
-    "                if root.get_left().value == key:\n",
-    "                    root.set_left(new_node)\n",
-    "                else:\n",
-    "                    self._find_and_replace(root.get_left(), key, new_node)\n",
-    "            elif root.value < key:\n",
-    "                # go right\n",
-    "                if root.get_right().value == key:\n",
-    "                    root.set_right(new_node)\n",
-    "                else:\n",
-    "                    self._find_and_replace(root.get_right(), key, new_node)\n",
-    "    \n",
+    "        \n",
     "    def _delete_leaf(self, root, key):\n",
     "        print(f'{root} {key}')\n",
     "        if root is None:\n",
@@ -222,14 +205,15 @@
     "            left_child = root.get_left()\n",
     "            right_child = root.get_right()\n",
     "            if (left_child is None) and (right_child is None):\n",
+    "                print('Noning')\n",
     "                # set root to None\n",
-    "                self._find_and_replace(self.leader, root.value, None)\n",
+    "                del root\n",
     "            elif (left_child is None):\n",
     "                # set root to right child\n",
-    "                self._find_and_replace(self.leader, root.value, root.get_right())\n",
+    "                root.set_to(right_child)\n",
     "            elif (right_child is None):\n",
     "                # set root to left_child\n",
-    "                self._find_and_replace(self.leader, root.value, root.get_right())\n",
+    "                root.set_to(left_child)\n",
     "            elif (left_child is not None) and (right_child is not None):\n",
     "                print(f'replacing {root} with {right_child}')\n",
     "                root.value = right_child.value\n",
@@ -301,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -309,13 +293,16 @@
      "output_type": "stream",
      "text": [
       "[1, 3, 4, 6, 7, 8, 10, 13, 14]\n",
-      "(key = 8, (3, 10)) 6\n",
-      "(key = 3, (1, 6)) 6\n",
+      "(key = 8, (3, 10)) 3\n",
+      "(key = 3, (1, 6)) 3\n",
+      "replacing (key = 3, (1, 6)) with (key = 6, (4, 7))\n",
+      "new root (key = 6, (1, 6))\n",
       "(key = 6, (4, 7)) 6\n",
       "replacing (key = 6, (4, 7)) with (key = 7, (none, none))\n",
       "new root (key = 7, (4, 7))\n",
       "(key = 7, (none, none)) 7\n",
-      "[1, 3, 8, 10, 13, 14]\n"
+      "Noning\n",
+      "[1, 6, 4, 7, 7, 8, 10, 13, 14]\n"
      ]
     }
    ],
@@ -332,7 +319,7 @@
     "bst2.insert(13)\n",
     "print(list(bst2.inorder_traversal()))\n",
     "# Delete leaf\n",
-    "bst2.delete_key(6)\n",
+    "bst2.delete_key(3)\n",
     "print(list(bst2.inorder_traversal()))"
    ]
   },
