Basic linked list now works

--- a/Linked Lists.ipynb
+++ b/Linked Lists.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linked Lists\n",
+    "\n",
+    "A linked list is a list in which each node contains its data and a pointer to the next node. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -44,7 +53,25 @@
     "            else:\n",
     "                raise IndexError('Index out of bounds')\n",
     "        \n",
-    "        return cur_node"
+    "        return cur_node\n",
+    "    \n",
+    "    def remove(self, key):\n",
+    "        curr_node = self.head\n",
+    "        found = False\n",
+    "        \n",
+    "        while curr_node.next is not None:\n",
+    "            if curr_node.next.data == key:\n",
+    "                # Just make the current node point towards the node the next node is \n",
+    "                # pointing at\n",
+    "                curr_node.next = curr_node.next.next\n",
+    "                found = True\n",
+    "                break\n",
+    "            else:\n",
+    "                curr_node = curr_node.next\n",
+    "        \n",
+    "        if not found:\n",
+    "            raise KeyError(f'key {key} not found')\n",
+    "            "
    ]
   },
   {
@@ -53,14 +80,12 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[< 5 >, < 2 >, < 6 >, < 0 >]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[< 5 >, < 2 >, < 6 >, < 0 >]\n",
+      "[< 2 >, < 6 >, < 0 >]\n"
+     ]
     }
    ],
    "source": [
@@ -69,7 +94,9 @@
     "l.append(2)\n",
     "l.append(6)\n",
     "l.append(0)\n",
-    "list(l)"
+    "print(list(l))\n",
+    "l.remove(5)\n",
+    "print(list(l))\n"
    ]
   },
   {
