added cycle in Linked Lists

--- a/Linked Lists.ipynb
+++ b/Linked Lists.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +70,7 @@
     "                curr_node = curr_node.next\n",
     "        \n",
     "        if not found:\n",
-    "            raise KeyError(f'key {key} not found')\n",
-    "            "
+    "            raise KeyError(f'key {key} not found')"
    ]
   },
   {
@@ -97,6 +96,206 @@
     "print(list(l))\n",
     "l.remove(5)\n",
     "print(list(l))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cycle in linked list\n",
+    "\n",
+    "A linked list can have a cycle, where the last node is pointing towards a node in the list (see tortoise and hare problem in linked lists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[< 24 >, < 92 >, < 98 >, < 99 >, < 98 >, < 53 >, < 95 >, < 15 >, < 50 >, < 61 >]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint\n",
+    "l2 = LinkedList()\n",
+    "for _ in range(10):\n",
+    "    l2.append(randint(0, 99))\n",
+    "print(list(l2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l2[9].next = l2[6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "< 2 >\n",
+      "< 7 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 7 >\n",
+      "< 10 >\n",
+      "< 6 >\n",
+      "< 1 >\n",
+      "< 0 >\n",
+      "< 6 >\n",
+      "< 6 >\n",
+      "< 1 >\n",
+      "< 0 >\n",
+      "< 6 >\n",
+      "< 6 >\n",
+      "< 1 >\n",
+      "< 0 >\n",
+      "< 6 >\n",
+      "< 6 >\n",
+      "< 1 >\n"
+     ]
+    }
+   ],
+   "source": [
+    "cycle = l2[0]\n",
+    "for _ in range(20):\n",
+    "    print(cycle)\n",
+    "    cycle = cycle.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "< 1 >\n",
+      "< 4 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n",
+      "< 0 >\n",
+      "< 10 >\n",
+      "< 3 >\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "for elem in l2:\n",
+    "    i += 1\n",
+    "    print(elem)\n",
+    "    if i == 100:\n",
+    "        break\n",
+    "    "
    ]
   },
   {
